<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PvsMActivity"
    android:background="@drawable/ic_difficulty"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingTop="100dp"
    >

    <TextView
        android:id="@+id/title_mode_machine_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_mode_machine_screen"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="100dp"
        />

    <Button
        android:id="@+id/btn_machine_difficult_ease"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/purple_default"
        android:text="@string/btn_ease"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        />

    <Button
        android:id="@+id/btn_machine_difficult_medium"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_default"
        android:text="@string/btn_medium"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        />

    <Button
        android:id="@+id/btn_machine_difficult_impossible"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_default"
        android:text="@string/btn_hard"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        />

</LinearLayout>