<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PvsMActivity"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_mode_machine_screen"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ease_bot"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ease_bot"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/purple_default"
        android:text="@string/btn_ease"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/btn_medium_bot"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_default"
        android:text="@string/btn_medium"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ease_bot"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_ease_bot"
        app:layout_constraintTop_toBottomOf="@+id/btn_ease_bot"
        />

    <Button
        android:id="@+id/btn_hard_bot"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_default"
        android:text="@string/btn_hard"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_medium_bot"
        app:layout_constraintStart_toStartOf="@+id/btn_medium_bot"
        app:layout_constraintTop_toBottomOf="@+id/btn_medium_bot"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="198dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hard_bot"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/btn_hard" />

</androidx.constraintlayout.widget.ConstraintLayout>