<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymbolChoose"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingTop="90dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_chose_symbol"
        android:textColor="@color/black"
        android:textSize="24sp"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="200dp"
    >

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_o_icon"
            android:backgroundTint="@color/white"
            android:contentDescription='@string/desc_btn_x_desc'
            android:src="@drawable/ic_x_icon"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/desc_btn_o_desc"
            android:src="@drawable/ic_o_icon"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
    </LinearLayout>

    <ImageButton
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_default"
        android:src="@drawable/ic_btn_next"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/btn_next_choose_desc" />

</LinearLayout>