<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top"
    tools:context=".ModeActivity">

    <TextView
        android:id="@+id/title_mode_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_mode_screen"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_p_vs_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        android:textAlignment="center"
        />

    <ImageButton
        android:id="@+id/btn_p_vs_p"
        android:layout_width="180dp"
        android:layout_height="85dp"
        android:backgroundTint="@color/pink_default"
        android:contentDescription="@string/btn_player_vs_player_desc"
        android:src="@drawable/ic_back_btn_pvs_p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003" />

    <ImageButton
        android:id="@+id/btn_p_vs_m"
        android:layout_width="180dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/pink_default"
        android:contentDescription="@string/btn_player_vs_machine_desc"
        android:src="@drawable/ic_player_vs_machine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_p_vs_p" />

</androidx.constraintlayout.widget.ConstraintLayout>